main.tf
resource "aws_vpc" "mypr_vpc" {
  cidr_block           = "172.31.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "dev"
  }
}

// Deploying Subnet for the resouces within the vpc

resource "aws_subnet" "mypr_public_subnet" {
  vpc_id                  = aws_vpc.mypr_vpc.id //this is value to the variable "mypr_vpc" and .id to get the value
  cidr_block              = "172.31.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1a"

  tags = {
    Name = "dev-public"
  }

}

// Creating an internet gateway to the resources

resource "aws_internet_gateway" "mypr_internet_gateway" {

  vpc_id = aws_vpc.mypr_vpc.id

  tags = {
    Name = "dev-igw"
  }

}

// Creating a route table

resource "aws_route_table" "mypr_public_route" {
  vpc_id = aws_vpc.mypr_vpc.id

  tags = {
    Name = "dev-public-rt"
  }

}

// Resource to create a routing table entry (a route) in a VPC routing table.

resource "aws_route" "default_route" {
  route_table_id         = aws_route_table.mypr_public_route.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.mypr_internet_gateway.id

}

// Bridging a gap between a route table and our subnet

resource "aws_route_table_association" "mypr_public_assoc" {
  subnet_id      = aws_subnet.mypr_public_subnet.id
  route_table_id = aws_route_table.mypr_public_route.id
}

// Creating a security group

resource "aws_security_group" "mypr_secgr" {

  name        = "dev_secgr" // This tag is optional, security group have a name attribute. 
  description = "dev security group"
  vpc_id      = aws_vpc.mypr_vpc.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"] // can put here (whatmyip) own ip address or the addresses that you want to access the site

  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

// Creating ssh key pair.

resource "aws_key_pair" "mypr_auth" {
  key_name = "myprkey"
  public_key = file("~/.ssh/myprkey.pub")
}


resource "aws_instance" "dev_node" {
  instance_type = "t2.micro"
  ami = data.aws_ami.server_ami.id
  key_name = aws_key_pair.mypr_auth.id
  vpc_security_group_ids = [aws_security_group.mypr_secgr.id]
  subnet_id = aws_subnet.mypr_public_subnet.id

  // Adding user-data
  user_data = file("userdata.tpl")

  // In order to resize the size of the drive

  root_block_device {
    volume_size = 10   //free tier limit is 16
  }

  tags = {
    Name = "dev_node"
  }

  // Using Local Provisioner--it doesn't change the plan
  // Instead of hard-coding OS "linux-ssh-config.tpl", we can make use of vaiable 
 provisioner "local-exec" {
    command = templatefile ("${var.host_os}-ssh-config.tpl", {
        hostname = self.public_ip,
        user = "ubuntu",
        identityfile = "~/.ssh/myprkey"

    })
    //interpreter = [ "bash", "-c"] 
    // pick the right one dynamically
    interpreter = var.host_os == "linux" ? ["bash","-c"]:["powershell","-command"]
  }
}
